--- a/block-BHaaar/stylesheets/style.css
+++ b/block-BHaaar/stylesheets/style.css
@@ -155,35 +155,35 @@ section {
   color: aliceblue;
 }
 
-.box-1 {
+.google {
   background-color: #f51b47;
 }
 
-.box-2 {
+.material {
   background-color: rgb(94, 180, 94);
 }
 
-.box-3 {
+.doodle {
   background-color: purple;
 }
 
-.box-4 {
+.google-blue {
   background-color: aqua;
 }
-.box-5 {
+.design {
   background-color: rgb(47, 78, 47);
 }
 
-.box-6 {
+.glass {
   background-color: rgb(19, 241, 19);
 }
 
-.box-7 {
+.html {
   background-color: yellow;
 }
-.box-8 {
+.css {
   background-color: rgb(248, 104, 7);
 }
-.box-9 {
+.js {
   background-color: #f51b47;
 }
