--- a/block-BHaaav/stylesheets/style.css
+++ b/block-BHaaav/stylesheets/style.css
@@ -130,6 +130,8 @@ table {
   border-spacing: 0;
 }
 
+/* My Reset */
+
 *,
 ::before,
 ::after {
@@ -141,19 +143,23 @@ table {
 /* Custom Styles */
 
 /* typography */
-h1 {
+
+.heading {
   font-size: 1.6rem;
   font-weight: 600;
   margin-top: 7rem;
   color: aliceblue;
 }
-h2 {
+
+.title {
   font-size: 1rem;
   font-weight: 600;
   margin: 1rem 0;
   color: aliceblue;
+  word-spacing: 0.6rem;
 }
-h3 {
+
+.hero-text {
   color: gray;
   padding-bottom: 6rem;
 }
@@ -165,22 +171,29 @@ h3 {
   margin: 0 auto;
   padding: 1rem 5rem;
 }
+
+/* Global */
+
 body {
   font-family: Arial, Helvetica, sans-serif;
 }
+
 img {
   width: 14rem;
   height: 14rem;
   border-radius: 50%;
+  object-fit: cover;
 }
 
 /* Header */
-a {
+
+.link {
   text-decoration: none;
   font-size: 0.7rem;
   margin-right: 1rem;
   color: rgb(250, 249, 249);
 }
+
 .header {
   text-align: center;
 }
@@ -191,36 +204,33 @@ hr {
   margin: 2rem 0;
 }
 
-.sec-1,
+.blog-1,
 .header {
   background-color: rgba(0, 0, 0, 0.9);
 }
 
 /* Section-2 */
 
-.sec-2 {
+.blog-2 {
   background-color: #4b4a9b;
 }
-.btn {
-  margin: 0 0 1.5rem 0;
-  display: inline-block;
-}
-p {
+
+.blog-text {
   color: #faf6f6;
-  font-size: 0.7rem;
+  font-size: 0.8rem;
   padding: 1.5rem 0;
-  line-height: 1.5;
+  line-height: 1.7;
 }
 
 /* Section-3 */
 
-.sec-3 {
+.blog-3 {
   background-color: #313079;
 }
 
 /* Section-4 */
 
-.sec-4 {
+.blog-4 {
   background-color: #35345e;
 }
 
